--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
             "preLaunchTask": "Cargo: build (debug)",
             "env": {
                 "RUST_LOG": "info,sqlx::postgres::notice=warn",
-                "RUST_BACKTRACE": "1"
+                "RUST_BACKTRACE": "1",
+                "DATABASE_CONNECTION_STRING": "postgres://postgres:password@localhost:5432/rust-sample-db"
             },
             "console": "internalConsole"
         }
