--- a/workspace/application/Cargo.toml
+++ b/workspace/application/Cargo.toml
@@ -21,3 +21,12 @@ tower = { version = "0.5.1", features = ["full"] }
 anyhow = "1.0"
 validator = { version = "0.19", features = ["derive"] }
 axum-extra = "0.9.6"
+
+once_cell = "1.20"
+futures-util = "0.3"
+uuid = { version = "1.0", features = ["v4"] }
+
+opentelemetry = {version="*"}
+tracing-opentelemetry = "0.28"
+opentelemetry_sdk = { version = "*", features = ["async-std", "rt-tokio"] }
+opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }
