--- a/workspace/infrastructure/Cargo.toml
+++ b/workspace/infrastructure/Cargo.toml
@@ -16,6 +16,11 @@ serde_json = { version = "1.0"}
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 
+opentelemetry = {version="*"}
+tracing-opentelemetry = "0.28"
+opentelemetry_sdk = { version = "*", features = ["async-std", "rt-tokio"] }
+opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }
+
 
 [lib]
 name = "infrastructure"
