--- a/workspace/infrastructure/Cargo.toml
+++ b/workspace/infrastructure/Cargo.toml
@@ -16,10 +16,10 @@ serde_json = { version = "1.0"}
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 
-opentelemetry = {version="*"}
+opentelemetry = {version="0.27"}
 tracing-opentelemetry = "0.28"
-opentelemetry_sdk = { version = "*", features = ["async-std", "rt-tokio"] }
-opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }
+opentelemetry_sdk = { version = "0.27", features = ["async-std", "rt-tokio"] }
+opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
 
 
 [lib]
