--- a/workspace/application/Cargo.toml
+++ b/workspace/application/Cargo.toml
@@ -32,6 +32,7 @@ opentelemetry_sdk = { version = "0.27", features = ["async-std", "rt-tokio"] }
 opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
 opentelemetry-semantic-conventions = "0.27"
 
-
 metrics = { version = "0.24", default-features = false }
 metrics-exporter-prometheus = { version = "0.16", default-features = false }
+
+reqwest = { version = "0.12", features = ["json"] }
