--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
                 "MOCKSERVER_BASE_URL": "http://localhost:1080"
             },
             "cargo": {
-                "cwd": "${workspaceFolder}/workspace",
+                "cwd": "${workspaceFolder}/workspace/api",
                 "args": [
                     "build"
                 ]
