--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,16 +23,40 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Launch Debug LLDB",
+            "name": "Debug api",
             "env": {
                 "RUST_LOG": "info,sqlx::postgres::notice=warn,sqlx_core=warn,sea_orm_migration::migrator=warn",
                 "RUST_BACKTRACE": "1",
                 "DATABASE_CONNECTION_STRING": "postgres://postgres:password@localhost:5432/rust-sample-db",
                 "HTTP_REQUEST_METRICS_EXPONENTIAL_SECONDS": "0.5,0.8,1",
-                "MOCKSERVER_BASE_URL": "http://localhost:1080"
+                "MOCKSERVER_BASE_URL": "http://localhost:1080",
+                "AWS_PROFILE":"localstack",
+                "RUST_TEST_AWS_SQS_QUEUE_URL": "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/rust-test-sqs-queue.fifo"
             },
             "cargo": {
                 "cwd": "${workspaceFolder}/workspace/api",
+                "args": [
+                    "build"
+                ]
+            },
+            "console": "internalConsole"
+        },
+
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug aws-sqs-consumer",
+            "env": {
+                "RUST_LOG": "info,sqlx::postgres::notice=warn,sqlx_core=warn,sea_orm_migration::migrator=warn",
+                "RUST_BACKTRACE": "1",
+                "DATABASE_CONNECTION_STRING": "postgres://postgres:password@localhost:5432/rust-sample-db",
+                "HTTP_REQUEST_METRICS_EXPONENTIAL_SECONDS": "0.5,0.8,1",
+                "MOCKSERVER_BASE_URL": "http://localhost:1080",
+                "AWS_PROFILE":"localstack",
+                "RUST_TEST_AWS_SQS_QUEUE_URL": "http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/rust-test-sqs-queue.fifo"
+            },
+            "cargo": {
+                "cwd": "${workspaceFolder}/workspace/aws-sqs-consumer",
                 "args": [
                     "build"
                 ]
