--- a/workspace/api/Cargo.toml
+++ b/workspace/api/Cargo.toml
@@ -36,3 +36,6 @@ metrics = { version = "0.24", default-features = false }
 metrics-exporter-prometheus = { version = "0.16", default-features = false }
 
 reqwest = { version = "0.12", features = ["json"] }
+
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-sqs = "1.50.0"
